# FindStrongScatterers

./: CMakeLists.txt  README.md
src/: integralImage.hh  integralImage.hxx  main.cc  utils.cc  utils.hh
